force-app/main/default/objects/Case/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Report/Franchise Tax</fullName>
            </value>
            <value>
                <fullName>Bookkeeping - Q1</fullName>
            </value>
            <value>
                <fullName>Bookkeeping - Q2</fullName>
            </value>
            <value>
                <fullName>Bookkeeping - Q3</fullName>
            </value>
            <value>
                <fullName>Bookkeeping - Q4</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>Corp Setup</fullName>
            </value>
            <value>
                <fullName>Dissolutions</fullName>
            </value>
            <value>
                <fullName>Financial Planning</fullName>
            </value>
            <value>
                <fullName>Loan Agreements</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Personal Tax Prep</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Tax - 1023/1024 NonProfit</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q1</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q2</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q3</fullName>
            </value>
            <value>
                <fullName>Tax - 1040-ES Estimated Q4</fullName>
            </value>
            <value>
                <fullName>Tax - 1040 Individual</fullName>
            </value>
            <value>
                <fullName>Tax - 1041/706/709/Payroll</fullName>
            </value>
            <value>
                <fullName>Tax - 1065 Partnership</fullName>
            </value>
            <value>
                <fullName>Tax - 1120 Corporation</fullName>
            </value>
            <value>
                <fullName>Tax - 1120 S Corporation</fullName>
            </value>
            <value>
                <fullName>Tax - 990 Tax Exempt</fullName>
            </value>
            <value>
                <fullName>Tax - Business TBD</fullName>
            </value>
            <value>
                <fullName>Tax Consulting - LZ Limited</fullName>
            </value>
            <value>
                <fullName>Tax Consulting - Unlimited</fullName>
            </value>
            <value>
                <fullName>Tax Notice</fullName>
            </value>
            <value>
                <fullName>Tax Planning</fullName>
            </value>
            <value>
                <fullName>Trusts and Estates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>