force-app/main/default/objects/Case/fields/Tax_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Tax_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>