force-app/main/default/objects/Case/fields/Tax_Prep_AP_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tax_Prep_AP_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Prep AP Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>