force-app/main/default/objects/Case/fields/Tax_Preparer__c.field-meta.xml
<CustomField>
    <fullName>Tax_Preparer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Preparer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>