force-app/main/default/objects/Case/fields/Tax_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Tax_Quarter__c</fullName>
    <label>Tax Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>