force-app/main/default/objects/Case/fields/Tax_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>