force-app/main/default/objects/Case/fields/Team_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Team_Assigned__c</fullName>
    <description>Field of Team used by Fulfillment</description>
    <inlineHelpText>Field of Team used by Fulfillment</inlineHelpText>
    <label>Team Assigned</label>
    <type>TextArea</type>
</CustomField>