force-app/main/default/objects/Case/fields/Team_Leaders__c.field-meta.xml
<CustomField>
    <fullName>Team_Leaders__c</fullName>
    <label>Team Leaders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adnan Rasul</fullName>
            </value>
            <value>
                <fullName>Alex Zhong</fullName>
            </value>
            <value>
                <fullName>Christian TenEyck</fullName>
            </value>
            <value>
                <fullName>Donna Casey</fullName>
            </value>
            <value>
                <fullName>Ermal Kukaj</fullName>
            </value>
            <value>
                <fullName>Gabriella Deville</fullName>
            </value>
            <value>
                <fullName>Gorson Qiao</fullName>
            </value>
            <value>
                <fullName>Jeff Yu</fullName>
            </value>
            <value>
                <fullName>Joseph LaMantia</fullName>
            </value>
            <value>
                <fullName>Joshua Meller</fullName>
            </value>
            <value>
                <fullName>Kelley Poppert</fullName>
            </value>
            <value>
                <fullName>Kelvin Chen</fullName>
            </value>
            <value>
                <fullName>Kristopher Zentner</fullName>
            </value>
            <value>
                <fullName>Kyle Guillou</fullName>
            </value>
            <value>
                <fullName>Lea De Leon</fullName>
            </value>
            <value>
                <fullName>Leonid Sverdlov</fullName>
            </value>
            <value>
                <fullName>Maria Nunez</fullName>
            </value>
            <value>
                <fullName>Nenita Juarez</fullName>
            </value>
            <value>
                <fullName>Pam Kaur</fullName>
            </value>
            <value>
                <fullName>Rudy Robles</fullName>
            </value>
            <value>
                <fullName>Sajjad Afzal</fullName>
            </value>
            <value>
                <fullName>Sanch Sancho</fullName>
            </value>
            <value>
                <fullName>Solomon Sionov</fullName>
            </value>
            <value>
                <fullName>Sue Tse</fullName>
            </value>
            <value>
                <fullName>Taneka Deveaux</fullName>
            </value>
            <value>
                <fullName>Sara Hussain</fullName>
            </value>
            <value>
                <fullName>Deni Hamzaraj</fullName>
            </value>
            <value>
                <fullName>Gerard Murat</fullName>
            </value>
            <value>
                <fullName>Jose Almonte</fullName>
            </value>
            <value>
                <fullName>Mohammad Jamil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>