force-app/main/default/objects/Case/fields/Tools_Used_to_Save__c.field-meta.xml
<CustomField>
    <fullName>Tools_Used_to_Save__c</fullName>
    <label>Tools Used to Save:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Audit Protection</fullName>
            </value>
            <value>
                <fullName>Discounted Monthly Retainer</fullName>
            </value>
            <value>
                <fullName>Discounted Service by 10%</fullName>
            </value>
            <value>
                <fullName>Discounted Service by 15%</fullName>
            </value>
            <value>
                <fullName>Discounted Service by 20%</fullName>
            </value>
            <value>
                <fullName>Extended Refund Period 1 Week</fullName>
            </value>
            <value>
                <fullName>Extended Refund Period 2 Weeks</fullName>
            </value>
            <value>
                <fullName>No Tools Needed to Save</fullName>
            </value>
            <value>
                <fullName>Package Modification</fullName>
            </value>
            <value>
                <fullName>Personal Audit Protection</fullName>
            </value>
            <value>
                <fullName>Post-Save Appointment</fullName>
            </value>
            <value>
                <fullName>Product Reassurance</fullName>
            </value>
            <value>
                <fullName>Reassignment Request</fullName>
            </value>
            <value>
                <fullName>Renewal Modification</fullName>
            </value>
            <value>
                <fullName>Retirement Consulting Appt</fullName>
            </value>
            <value>
                <fullName>Scheduled Tax Appointment to Review Taxes</fullName>
            </value>
            <value>
                <fullName>Utilizing Tax Plan</fullName>
            </value>
            <value>
                <fullName>Waived 2-3 Monthlies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>