force-app/main/default/objects/Case/fields/Transferred_to_Sales_Dissolution__c.field-meta.xml
<CustomField>
    <fullName>Transferred_to_Sales_Dissolution__c</fullName>
    <label>Transferred to Sales - Dissolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>