force-app/main/default/objects/Case/fields/Trends__c.field-meta.xml
<CustomField>
    <fullName>Trends__c</fullName>
    <label>Trends</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3 Business Day Cancel</fullName>
            </value>
            <value>
                <fullName>Account Placed on Hold</fullName>
                <isActive>false</isActive>
                <label>Account Placed on Hold</label>
            </value>
            <value>
                <fullName>All Included</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Features</fullName>
                <isActive>false</isActive>
                <label>Bookkeeping Features</label>
            </value>
            <value>
                <fullName>Client felt like rep was misleading</fullName>
                <isActive>false</isActive>
                <label>Client felt like rep was misleading</label>
            </value>
            <value>
                <fullName>Client Kept Getting Appts Rescheduled</fullName>
                <isActive>false</isActive>
                <label>Client Kept Getting Appts Rescheduled</label>
            </value>
            <value>
                <fullName>Client stated they didn&apos;t get renewal email</fullName>
                <label>Client Stated They Didn&apos;t Get Renewal Email</label>
            </value>
            <value>
                <fullName>Crypto Complexities</fullName>
            </value>
            <value>
                <fullName>Dedicated Bookkeeping</fullName>
                <isActive>false</isActive>
                <label>Dedicated Bookkeeping</label>
            </value>
            <value>
                <fullName>Equip Cancellation</fullName>
                <isActive>false</isActive>
                <label>Equip Cancellation</label>
            </value>
            <value>
                <fullName>Filings (BTP)</fullName>
                <isActive>false</isActive>
                <label>Filings (BTP)</label>
            </value>
            <value>
                <fullName>Filings (Other)</fullName>
                <isActive>false</isActive>
                <label>Filings (Other)</label>
            </value>
            <value>
                <fullName>Filings (PTP)</fullName>
                <isActive>false</isActive>
                <label>Filings (PTP)</label>
            </value>
            <value>
                <fullName>Fulfillment Did Not Call For Scheduled Appt</fullName>
                <isActive>false</isActive>
                <label>Fulfillment Did Not Call For Scheduled Appt</label>
            </value>
            <value>
                <fullName>Fulfillment Issue(s)</fullName>
            </value>
            <value>
                <fullName>Fulfillment Said to Refund</fullName>
            </value>
            <value>
                <fullName>Issues with fulfillment appointments</fullName>
            </value>
            <value>
                <fullName>Lending PT: Attempt Payment within 30 days</fullName>
                <isActive>false</isActive>
                <label>Lending PT: Attempt Payment within 30 days</label>
            </value>
            <value>
                <fullName>Lending PT Cancellation</fullName>
                <isActive>false</isActive>
                <label>Lending PT Cancellation</label>
            </value>
            <value>
                <fullName>Marketing Audit Email Scare</fullName>
            </value>
            <value>
                <fullName>Monthly Fee Not Disclosed by Sales</fullName>
            </value>
            <value>
                <fullName>Monthly Fees</fullName>
                <isActive>false</isActive>
                <label>Monthly Fees</label>
            </value>
            <value>
                <fullName>Multiple STA Reassignments</fullName>
            </value>
            <value>
                <fullName>Option 1</fullName>
                <label>No Fulfillment Contact in 3+ Months</label>
            </value>
            <value>
                <fullName>No Response to Portal Messages and/or Emails</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Paid for Tax Prep in Portal - Already had the Service</fullName>
            </value>
            <value>
                <fullName>Payment Authorization</fullName>
                <isActive>false</isActive>
                <label>Payment Authorization</label>
            </value>
            <value>
                <fullName>Payment Plans</fullName>
                <isActive>false</isActive>
                <label>Payment Plans</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>