force-app/main/default/objects/Case/fields/Type_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Case__c</fullName>
    <label>Type of Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>