force-app/main/default/objects/Case/fields/Type_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Issue__c</fullName>
    <label>Type of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VTO</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ClientBooks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>