force-app/main/default/objects/Case/fields/Undersold_Services__c.field-meta.xml
<CustomField>
    <fullName>Undersold_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the representative not include services requested by the client or sell the incorrect number/type of services?</description>
    <inlineHelpText>Did the representative not include services requested by the client or sell the incorrect number/type of services?</inlineHelpText>
    <label>Undersold Services</label>
    <type>Checkbox</type>
</CustomField>