force-app/main/default/objects/Case/fields/Updated_By_Accountant_Portal__c.field-meta.xml
<CustomField>
    <fullName>Updated_By_Accountant_Portal__c</fullName>
    <label>Updated By (Accountant Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>