force-app/main/default/objects/Case/fields/Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Status__c</fullName>
    <label>Workflow Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VTO Incomplete</fullName>
            </value>
            <value>
                <fullName>VTO Submitted</fullName>
                <default>true</default>
                <label>VTO Submitted</label>
            </value>
            <value>
                <fullName>To Be Processed</fullName>
            </value>
            <value>
                <fullName>To Be Assigned</fullName>
            </value>
            <value>
                <fullName>Pre Prep</fullName>
            </value>
            <value>
                <fullName>In Preparation</fullName>
            </value>
            <value>
                <fullName>Open Points / Awaiting Client Info</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Corrections Needed</fullName>
            </value>
            <value>
                <fullName>To Be Posted</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
            </value>
            <value>
                <fullName>Client Approved</fullName>
            </value>
            <value>
                <fullName>eFile OptedOut</fullName>
            </value>
            <value>
                <fullName>eFile Approved</fullName>
            </value>
            <value>
                <fullName>eFiled</fullName>
            </value>
            <value>
                <fullName>eFile Confirmation</fullName>
            </value>
            <value>
                <fullName>eFile Rejected</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Emailed - No Response</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
            <value>
                <fullName>Called - Left VM</fullName>
            </value>
            <value>
                <fullName>Called - Estimated Tax Not Needed</fullName>
            </value>
            <value>
                <fullName>Accountant Assigned</fullName>
            </value>
            <value>
                <fullName>No Info in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>