force-app/main/default/objects/Case/fields/Zoura_Payment__c.field-meta.xml
<CustomField>
    <fullName>Zoura_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zuora Payment</label>
    <referenceTo>Zuora__Payment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>