force-app/main/default/objects/Case/fields/Zuora_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zuora Subscription</label>
    <referenceTo>Zuora__Subscription__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>