force-app/main/default/objects/Case/recordTypes/Bookkeeping_Escalation.recordType-meta.xml
<RecordType>
    <fullName>Bookkeeping_Escalation</fullName>
    <active>true</active>
    <businessProcess>Bookkeeping Escalation</businessProcess>
    <label>Bookkeeping Escalation</label>
</RecordType>