force-app/main/default/objects/Case/recordTypes/Bookkeeping_Reassignment.recordType-meta.xml
<RecordType>
    <fullName>Bookkeeping_Reassignment</fullName>
    <active>true</active>
    <businessProcess>Bookkeeping Reassignment</businessProcess>
    <label>Bookkeeping Reassignment</label>
</RecordType>