force-app/main/default/objects/Case/recordTypes/Client_Escalation.recordType-meta.xml
<RecordType>
    <fullName>Client_Escalation</fullName>
    <active>true</active>
    <businessProcess>Client</businessProcess>
    <label>Client Escalation</label>
</RecordType>