force-app/main/default/objects/Case/recordTypes/Fulfillment.recordType-meta.xml
<RecordType>
    <fullName>Fulfillment</fullName>
    <active>false</active>
    <businessProcess>Fulfillment</businessProcess>
    <description>Create this kind of case for fulfillment or portal issues</description>
    <label>Fulfillment</label>
</RecordType>