force-app/main/default/objects/Case/recordTypes/Jarrett_s_Cases.recordType-meta.xml
<RecordType>
    <fullName>Jarrett_s_Cases</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>Finicity / Client Portal Issue</label>
</RecordType>