force-app/main/default/objects/Case/recordTypes/Payroll_Off_Boarding.recordType-meta.xml
<RecordType>
    <fullName>Payroll_Off_Boarding</fullName>
    <active>true</active>
    <businessProcess>Payroll Offboarding</businessProcess>
    <label>Payroll Off-Boarding</label>
</RecordType>