force-app/main/default/objects/Case/recordTypes/Quality_Assurance.recordType-meta.xml
<RecordType>
    <fullName>Quality_Assurance</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>Quality Assurance</label>
</RecordType>