force-app/main/default/objects/Case/recordTypes/Reassignment.recordType-meta.xml
<RecordType>
    <fullName>Reassignment</fullName>
    <active>true</active>
    <businessProcess>Reassignment</businessProcess>
    <label>Reassignment</label>
</RecordType>