force-app/main/default/objects/Case/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Sales (BNA)</label>
</RecordType>