force-app/main/default/objects/Case/recordTypes/Subscription_Review.recordType-meta.xml
<RecordType>
    <fullName>Subscription_Review</fullName>
    <active>true</active>
    <businessProcess>Subscription Review</businessProcess>
    <label>Subscription Review</label>
</RecordType>