force-app/main/default/objects/Case/validationRules/Assignment_Adjustment.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Adjustment</fullName>
    <active>true</active>
    <description>Requires a Reassignment Type and Sub-type Category</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL( Sub_Type__c ,&apos;Assignment Adjustment&apos;),
ISPICKVAL( Sub_Type__c ,&apos;Bookkeeping&apos;),
ISPICKVAL( Sub_Type__c ,&apos;Payroll&apos;)),
ISBLANK(TEXT( Sub_Type_Category__c )),
ISBLANK(TEXT( Reassignment_Type__c  )))</errorConditionFormula>
    <errorMessage>You must select a Sub-Type Category and Reassignment Type to save the case</errorMessage>
</ValidationRule>