force-app/main/default/objects/Case/validationRules/Case_needs_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_needs_Type</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Type, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>A Case must have a Type</errorMessage>
</ValidationRule>