force-app/main/default/objects/Case/validationRules/Prevent_Reps_from_Viewing_QA_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Reps_from_Viewing_QA_Cases</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$Profile.Id=&apos;00ef1000000YTdm&apos;, 
RecordType.Name = &quot;Quality Assurance&quot;)</errorConditionFormula>
    <errorMessage>QA Support Cases are restricted.</errorMessage>
</ValidationRule>