force-app/main/default/objects/Case/validationRules/Sub_Type_Additional_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Type_Additional_Users</fullName>
    <active>true</active>
    <description>Requires new user details if the Sub-Type is Additional User</description>
    <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c,&apos;Additional User&apos;),
OR(ISBLANK( New_Name_of_User__c ),
ISBLANK( New_Email_of_User__c ),
ISBLANK( New_Phone_of_User__c )))</errorConditionFormula>
    <errorDisplayField>New_Name_of_User__c</errorDisplayField>
    <errorMessage>Please enter the name, email, and phone of the new user to submit the case</errorMessage>
</ValidationRule>