force-app/main/default/objects/Case/validationRules/Sub_Type_Bank_Sync.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Type_Bank_Sync</fullName>
    <active>true</active>
    <description>Requires Bank name if the Sub-Type is Bank Sync</description>
    <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c,&apos;Bank Sync&apos;),
ISBLANK( Bank__c  ))</errorConditionFormula>
    <errorDisplayField>Bank__c</errorDisplayField>
    <errorMessage>Please enter the Bank name to submit the case</errorMessage>
</ValidationRule>