force-app/main/default/objects/Case/validationRules/Sub_Type_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Type_Category</fullName>
    <active>true</active>
    <description>Requires Sub-Type Category if the Sub-Type is Reassignment</description>
    <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c,&apos;Reassignment&apos;),
ISBLANK(TEXT( Sub_Type_Category__c   )))</errorConditionFormula>
    <errorDisplayField>Sub_Type_Category__c</errorDisplayField>
    <errorMessage>Please enter the Sub-Type Category to submit the case</errorMessage>
</ValidationRule>