force-app/main/default/objects/Case/validationRules/Sub_Type_Connection_Issue_or_Missing_Tx.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Type_Connection_Issue_or_Missing_Tx</fullName>
    <active>true</active>
    <description>Requires Finicity Customer ID if the Sub-Type is Connection Issue or Missing Transactions</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL( Sub_Type__c,&apos;Portal Error&apos;),
ISPICKVAL( Sub_Type__c, &apos;Missing Transactions&apos;)),
ISBLANK( Finicity_Customer_ID__c ))</errorConditionFormula>
    <errorDisplayField>Finicity_Customer_ID__c</errorDisplayField>
    <errorMessage>Please enter the Finicity Customer ID to submit the case</errorMessage>
</ValidationRule>