force-app/main/default/objects/Case/validationRules/Sub_Type_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Type_Other</fullName>
    <active>true</active>
    <description>RequiresOther if the Sub-Type is Other</description>
    <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c,&apos;Other&apos;),ISBLANK( Other__c ))</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Please enter details into the Other field to submit the case</errorMessage>
</ValidationRule>