force-app/main/default/objects/Case/validationRules/Sub_Type_Portal_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Type_Portal_Error</fullName>
    <active>true</active>
    <description>Requires Error Type if the Sub-Type is Portal Error</description>
    <errorConditionFormula>AND(
ISPICKVAL( Sub_Type__c,&apos;Portal Error&apos;),ISBLANK( TEXT(Error_Type__c )))</errorConditionFormula>
    <errorDisplayField>Error_Type__c</errorDisplayField>
    <errorMessage>Please enter the Error Type to submit the case</errorMessage>
</ValidationRule>