force-app/main/default/objects/Case/listViews/Accountant_Reassignment1.listView-meta.xml
<ListView>
    <fullName>Accountant_Reassignment1</fullName>
    <booleanFilter>(1 or 2) and 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Time_Zone__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>equals</operation>
        <value>Accountant Reassignment</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Reassignment</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notContain</operation>
        <value>closed,spam,duplicate</value>
    </filters>
    <label>Accountant Reassignment</label>
    <sharedTo>
        <role>Executive</role>
        <role>Manager</role>
        <role>Office_Manager</role>
        <role>Sales_Manager</role>
        <role>Service_Rep</role>
        <role>Tax_Rep</role>
    </sharedTo>
</ListView>