force-app/main/default/objects/Case/listViews/Accounting_Q.listView-meta.xml
<ListView>
    <fullName>Accounting_Q</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Time_Zone__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Accounting</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notContain</operation>
        <value>closed,failed,spam,duplicate,service</value>
    </filters>
    <label>Accounting Q</label>
    <language>en_US</language>
    <sharedTo>
        <role>Executive</role>
        <role>Manager</role>
        <role>Office_Manager</role>
        <role>Sales_Manager</role>
        <role>Service_Rep</role>
        <role>Tax_Rep</role>
    </sharedTo>
</ListView>